--- a/src/components/IntegrationsSection.css
+++ b/src/components/IntegrationsSection.css
@@ -1,5 +1,5 @@
 .integrations-section {
-  padding: 6rem 2rem;
+  padding: 2.2rem 1.2rem 1.7rem 1.2rem;
   background-color: #f0fdf4;
 }
 
@@ -112,7 +112,7 @@
   }
   
   .integrations-section {
-    padding: 4rem 1rem;
+    padding: 0.7rem 0.6rem 0.5rem 0.6rem;
   }
   
   .integrations-title {
